fix(post page): loading text could cause horizontal scroll on mobile

--- a/src/views/post-page/post-page.module.css
+++ b/src/views/post-page/post-page.module.css
@@ -38,11 +38,6 @@
   margin-right: 15px;
 }
 
-.loadingString {
-  padding: 5px;
-  position: absolute;
-}
-
 .dropdown {
   display: inline;
   position: relative;
@@ -87,12 +82,13 @@
   margin-left: 3px;
 }
 
+.loadingString {
+  padding: 5px;
+}
+
 .stateString {
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: calc(100vw - 28px);
-  width: 100vw;
   color: var(--text-info);
   font-size: x-small;
 }
